syntax = "proto3";

package taxi;

option go_package = "/taxi";

service TaxiService {
  rpc Create(Taxi) returns (Taxi);
  rpc Update(Taxi) returns (Taxi);
  rpc Delete(TaxiRequest) returns (Taxi);
  rpc Get(TaxiRequest) returns (Taxi);
  rpc GetAll(GetAllTaxisRequest) returns (GetAllTaxisResponse);
  rpc CheckField(CheckTaxi) returns (CheckRes);
  rpc GetTaxiByEmail(EmailRequest) returns (Taxi);
  rpc GetTaxiByRefreshToken(TaxiToken) returns (Taxi);
}

message TaxiToken {
  string refresh_token = 1;
}

message EmailRequest {
  string email = 1;
  string password = 2;
}

message CheckTaxi {
  string field = 1;
  string value = 2;
}

message CheckRes {
  bool exists = 1;
}

message GetAllTaxisRequest {
  int64 page = 1;
  int64 limit = 2;
}

message GetAllTaxisResponse {
  repeated Taxi allTaxis = 1;
}

message TaxiRequest {
  string taxiId = 1;
}

message Taxi {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string password = 5;
  string birthday = 6;
  string car_id = 7;
  string phone_number = 8;
  string gender = 9;
  string profile_photo = 10;
  string created_at = 11;
  string updated_at = 12;
  string deleted_at = 13;
  string refresh_token = 14;
}

message Review {
  string taxi_id = 1;
  string user_id = 2;
  string comment = 3;
  string stars = 4;
  string created_at = 5;
  string updated_at = 6;
  string deleted_at = 7;
}

message Car {
  string id = 1;
  string model = 2;
  string image_url = 3;
  string colour = 4;
  uint32 number_passenger = 5;
  uint32 number_bags = 6;
  string number = 7;
  string free_days = 8;
  string from_location = 9;
  string to_location = 10;
  uint64 price = 11;
  string created_at = 12;
  string updated_at = 13;
  string deleted_at = 14;
}